# test-gitlab-ci

./: .gitignore  .gitlab-ci.yml  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
tests/: test_foo.py
