[metadata]
name = foo-gitlab-ci
author = Benoit Seignovert
author-email = git.support@seignovert.fr
summary = Python package to test gitlab-ci
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/seignovert/test-gitlab-ci
license = MIT
keywords = gitlab
classifier = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages =
    foo

[bdist_wheel]
universal = 1

[coverage:report]
exclude_lines =
    def __repr__

[entry_points]
console_scripts =
    foo = foo.foo:foo